POWR-952 Remove cruft classes and fix badge alignment

--- a/web/themes/custom/cloudy/scss/components/_media.scss
+++ b/web/themes/custom/cloudy/scss/components/_media.scss
@@ -34,9 +34,11 @@
 }
 
 .align-right {
-  text-align: center;
-  img {
-    width: auto; // Images smaller than 50%
+  .field--type-image {
+    text-align: center;
+    img {
+      width: auto; // Images smaller than 50%
+    }
   }
 }
 
